--- a/audio/watch/makefile
+++ b/audio/watch/makefile
@@ -46,7 +46,6 @@ TARGET=CYW920820EVB-02
 
 SUPPORTED_TARGETS = \
   CYW920819EVB-02 \
-  CYW920721B2EVK-01 \
   CYW920721B2EVK-03 \
   CYW920721B2EVK-02 \
   CYW920820EVB-02 \
@@ -57,7 +56,6 @@ SUPPORTED_TARGETS = \
 TARGET_DEVICE_MAP = \
   CYW920819EVB-02/20819A1 \
   CYW920820EVB-02/20820A1 \
-  CYW920721B2EVK-01/20721B2 \
   CYW920721B2EVK-03/20721B2 \
   CYW920721B2EVK-02/20721B2 \
   CYW920719B2Q40EVB-01/20719B2 \
@@ -104,6 +102,9 @@ XIP?=xip
 TRANSPORT?=UART
 export ENABLE_DEBUG?=0
 
+SLEEP_SUPPORT ?= 0
+COEX_SUPPORT ?= 0
+
 # wait for SWD attach
 ifeq ($(ENABLE_DEBUG),1)
 CY_APP_DEFINES+=-DENABLE_DEBUG=1
@@ -113,14 +114,6 @@ ifneq ($(filter CYW920819EVB-02 CYW920820EVB-02,$(TARGET)),)
 WICED_MAX_LE_CLIENT_CONN = 1
 else
 WICED_MAX_LE_CLIENT_CONN = 3
-endif
-
-ifeq ($(TARGET),$(filter $(TARGET), CYW920706WCDEVAL CYW920719B2Q40EVB-01 ))
-SLEEP_SUPPORT = 0
-COEX_SUPPORT = 0
-else
-SLEEP_SUPPORT = 0
-COEX_SUPPORT = 0
 endif
 
 CY_APP_DEFINES +=   \
@@ -140,7 +133,7 @@ CY_APP_DEFINES +=  \
 ifeq ($(TRANSPORT),SPI)
 #$(info Transport=SPI)
 
-ifeq ($(TARGET),$(filter $(TARGET), CYW920706WCDEVAL CYW920719B2Q40EVB-01 CYW920721B2EVK-01 CYW920721B2EVK-02 CYW920721B2EVK-03))
+ifeq ($(TARGET),$(filter $(TARGET), CYW920706WCDEVAL CYW920719B2Q40EVB-01 CYW920721B2EVK-02 CYW920721B2EVK-03))
 CY_APP_DEFINES += -DWICED_HCI_TRANSPORT=2
 else
 $(error invalid TARGET for SPI transport, supported only for CYW920706WCDEVAL and CYW920719B2Q40EVB-01)
@@ -251,6 +244,7 @@ MAKE_OVERRIDES=OTA_FW_UPGRADE=$(OTA_FW_UPGRADE)
 export CONFIG
 export COMPONENTS
 export DISABLE_COMPONENTS
+-include internal.mk
 CY_SHARED_LIB_ARGS:=$(MAKECMDGOALS) $(MAKE_OVERRIDES) CY_APP_DEFINES+="$(CY_APP_DEFINES)" CY_TARGET_DEVICE=$(CY_TARGET_DEVICE) TARGET=$(TARGET)
 
 .PHONY: $(SEARCH_LIBS_AND_INCLUDES) shared_libs
@@ -263,7 +257,6 @@ $(SEARCH_LIBS_AND_INCLUDES):
 CY_APP_LOCATION=$(lastword $(MAKEFILE_LIST))
 
 CY_APP_BUILD_GOALS:=build qbuild clean program qprogram debug qdebug all
--include internal.mk
 ifeq ($(filter setup teardown,$(MAKECMDGOALS)),)
 
 # ensure pre-requisite wiced_btsdk project is present
